# GeoETL

./: .dockerignore  .gitignore  .llvm-cov.toml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Makefile  README.md  deny.toml  docker-compose.yml  mise.toml  rustfmt.toml
.circleci/: config-ci.yml  config-deploy-docs.yml  config-release.yml  config.yml
crates/formats/datafusion-csv/: Cargo.toml
crates/formats/datafusion-csv/docs/: csv-user-guide.md
crates/formats/datafusion-csv/src/: factory.rs  file_format.rs  file_source.rs  geospatial.rs  lib.rs  object_store_reader.rs  physical_exec.rs  sink.rs  writer.rs
crates/formats/datafusion-csv/tests/: e2e_non_spatial.rs  e2e_spatial.rs  e2e_test.rs  test_writer_integration.rs
crates/formats/datafusion-csv/tests/e2e_data/spatial/: natural-earth_cities_native_AS_WKT.csv  natural-earth_cities_native_AS_XY.csv  natural-earth_cities_native_AS_XYZ.csv  natural-earth_countries-bounds_native_AS_WKT.csv  natural-earth_countries-geography_native_AS_WKT.csv  natural-earth_countries_native_AS_WKT.csv  places.csv
crates/formats/datafusion-flatgeobuf/: Cargo.toml
crates/formats/datafusion-geojson/: Cargo.toml
crates/formats/datafusion-geojson/docs/: geojson-development.md
crates/formats/datafusion-geojson/src/: factory.rs  file_format.rs  file_source.rs  lib.rs  parser.rs  physical_exec.rs  sink.rs  writer.rs
crates/formats/datafusion-geojson/tests/: e2e.rs  test_writer_integration.rs
crates/formats/datafusion-geojson/tests/e2e_data/: download.sh  natural-earth_cities.geojson  natural-earth_countries-bounds.geojson  natural-earth_countries-geography.geojson  natural-earth_countries.geojson
crates/formats/datafusion-geoparquet/: Cargo.toml
crates/formats/datafusion-shared/: Cargo.toml
crates/formats/datafusion-shared/src/: lib.rs
crates/geoetl-cli/: Cargo.toml
crates/geoetl-cli/src/: display.rs  main.rs
crates/geoetl-cli/tests/: e2e_convert.rs
crates/geoetl-core/: Cargo.toml
crates/geoetl-core-common/: Cargo.toml
crates/geoetl-core-common/src/: drivers.rs  factory.rs  io.rs  lib.rs
crates/geoetl-core/src/: drivers.rs  error.rs  init.rs  lib.rs  operations.rs  types.rs  utils.rs
crates/geoetl-core/tests/: integration_convert.rs
crates/geoetl-formats/: Cargo.toml
crates/geoetl-operations/: Cargo.toml
docker/: docker-compose.yml
docker/dev/: Dockerfile
docker/dev/scripts/: geoetl-cli-dev.sh  geoetl-dev-watch.sh  geoetl-run-checks.sh
docker/prod/: Dockerfile
docs/: DATAFUSION_GEOSPATIAL_FORMAT_INTEGRATION_GUIDE.md  DEVELOPMENT.md  MANUAL_TEST_SCRIPT.md  QUICKREF.md  README.md  USERGUIDE.md  VISION.md
docs/adr/: 0001-high-level-architecture.md
docs/formats/: csv-development.md  geojson-user-guide.md
docs/geoetl-doc-site/: README.md  docusaurus.config.ts  package.json
docs/geoetl-doc-site/blog/: 2025-10-31-announcing-geoetl-v0.1.0.md  2025-10-31-introducing-geoetl.md  2025-11-01-getting-started-with-geoetl.md  2025-11-02-geoetl-architecture-deep-dive.md  authors.yml  tags.yml
docs/geoetl-doc-site/docs/: intro.md
docs/geoetl-doc-site/docs/tutorial-basics/: common-operations.md  first-conversion.md  installation.md  troubleshooting.md  understanding-drivers.md  working-with-csv.md
docs/geoetl-doc-site/src/components/HomepageFeatures/: index.tsx
docs/geoetl-doc-site/src/pages/: index.tsx
