# geoetl/Cargo.toml
[workspace]
members = [
  "crates/formats/datafusion-csv",
  "crates/formats/datafusion-flatgeobuf",
  "crates/formats/datafusion-geojson",
  "crates/formats/datafusion-geoparquet",
  "crates/geoetl-cli",
  "crates/geoetl-core",
  "crates/geoetl-formats",
  "crates/geoetl-operations",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Yogesh Dhanapal"]
description = "Modern vector geospatial ETL in Rust. 5-10x faster than GDAL with distributed processing support."
documentation = "https://geoetl.com"
edition = "2024"
license = "MIT"
repository = "https://github.com/geoetl/geoetl"

[workspace.dependencies]
clap = "4.5.20"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0.91"
tabled = "0.17.0"
