# geoetl/Cargo.toml
[workspace]
members = [
  "crates/formats/datafusion-csv",
  "crates/formats/datafusion-flatgeobuf",
  "crates/formats/datafusion-geojson",
  "crates/formats/datafusion-geoparquet",
  "crates/geoetl-cli",
  "crates/geoetl-core",
  "crates/geoetl-formats",
  "crates/geoetl-operations",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Yogesh Dhanapal"]
description = "Modern vector geospatial ETL in Rust. 5-10x faster than GDAL with distributed processing support."
documentation = "https://geoetl.com"
edition = "2024"
license = "MIT"
repository = "https://github.com/geoetl/geoetl"

[workspace.dependencies]
anyhow = "1.0.100"
arrow = "53"
arrow-array = "53"
arrow-cast = "53"
arrow-schema = "53"
async-trait = "0.1"
bytes = "1.10"
clap = "4.5.50"
csv = "1.4"
csv-async = { version = "1.3", features = ["tokio"] }
datafusion = "43.0.0"
datafusion-common = "43.0.0"
datafusion-execution = "43.0.0"
datafusion-physical-expr = "43.0.0"
futures = "0.3"
object_store = "0.11"
tabled = "0.17.0"
tempfile = "3.23"
tokio = "1.48"
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
url = "2.5"
