[package]
name = "geoetl-cli"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
geoetl-core = { path = "../geoetl-core" }
clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
anyhow = { workspace = true }
tabled = { workspace = true }
