[package]
name = "geoetl-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
tabled = { workspace = true, features = ["derive"] }
tracing.workspace = true
tracing-subscriber.workspace = true
geoetl-core = { path = "../geoetl-core" }

[package.metadata.docs.rs]
# Configure docs.rs to build documentation for this crate
# For more options, see https://docs.rs/about/builds#build-script-options
rustdoc-args = ["--cfg", "docsrs"]
