[package]
name = "geoetl-core"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[package.metadata.docs.rs]
# Configure docs.rs to build documentation for this crate
# For more options, see https://docs.rs/about/builds#build-script-options
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
# For doc tests
anyhow.workspace = true
