[package]
name = "datafusion-geojson"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
async-trait = { workspace = true }
datafusion = { workspace = true }
datafusion-common = { workspace = true }
datafusion-execution = { workspace = true }
datafusion-physical-expr = { workspace = true }
datafusion-session = { workspace = true }
datafusion-shared = { path = "../datafusion-shared" }
futures = { workspace = true }
geoarrow-array = { workspace = true }
geoarrow-schema = { workspace = true }
geojson = "0.24.2"
geo-types = "0.7"
object_store = { workspace = true, features = ["aws", "azure", "gcp", "http"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
url = { workspace = true }

[dev-dependencies]
geo-traits = { workspace = true }
tempfile = { workspace = true }
serde_json = "1.0"
